--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,13 @@
 </head>
 </head>
 <body>
+  <script src="./js/pdf.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      pdfjsLib.GlobalWorkerOptions.workerSrc = "./js/pdf.worker.min.js";
+      pdfRenderOptions = {
+        cMapPacked: false,
+      };
+    </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
