Correccion index.html

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
       };
     </script>
     <script>
-      var serviceWorkerVersion = null;
+      // var serviceWorkerVersion = null;
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
